# pygql

./: .gitignore  AUTHORIZATION.md  CHANGELOG_RESOLVER_INFO.md  CORS_CONFIG.md  ERROR_HANDLING.md  NAMING_CONVENTIONS.md  README.es.md  README.md  RESOLVER_INFO.md  SCALARS.md  SESSIONS.md  pyproject.toml  test_directive_order.py  test_field_directives.py  test_flow_standalone.py  test_named_operations.py  test_scalar_flow.py  test_scalar_manual.py  test_scalar_unit.py
examples/: README.md  config_cors_example.yml  cors_example.py  mount_example.py
pgql/: __init__.py
pgql/directives/: base.py
pgql/graphql/errors/: definition_error.py
pgql/http/: http.py
pgql/resolvers/: __init__.py  base.py
pygql/: __init__.py
pygql/http/: config.py  http.py
pythongql/http/: http.py
tests/basic/: README_TESTING.md  config_camel_snake.yml  config_scalars.yml  run.py  run_camel_snake.py  run_demo.py  run_no_auth.py  run_restricted.py  run_with_directives.py  run_with_scalars.py  run_with_sessions.py  test_camel_snake.py  test_cors.py  test_directives.py  test_errors.py  test_mount_fastapi.py  test_resolver_info.py  test_scalars.py  test_sessions.py
tests/basic/etc/: http.yml  http_directives.yml
tests/basic/resolvers/gql/company/: company.py
tests/basic/resolvers/gql/scalars/: date.py
tests/basic/schema/: type.gql
tests/basic/schema/comunicacion/: schema.gql
tests/basic/schema_camel_snake/: schema.gql
tests/basic/schema_directives/: schema.gql
tests/basic/schema_scalars/: mutations.gql  queries.gql  scalars.gql  types.gql
(+8 files in other folders)
